--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-remastered",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Jadyngg19.github.io/portfolio-remastered/",
+  "homepage": "https://https://jadyngg19.github.io/portfolio-remastered/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.5",
