--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-remastered",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://https://jadyngg19.github.io/portfolio-remastered/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
